* FIX: attach agent for ehcache/sizeof; * Updated the version of protobuf-schemas.